--- a/app/src/main/res/layout/activity_dades_element.xml
+++ b/app/src/main/res/layout/activity_dades_element.xml
@@ -178,16 +178,18 @@
         app:layout_constraintStart_toStartOf="@+id/separadorVertical"
         app:layout_constraintTop_toBottomOf="@+id/informacioConfiguracioElement" />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnCompartir"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/boto_rodo"
-        app:backgroundTint="#000000"
-        app:icon="@android:drawable/ic_menu_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_share"
+        android:visibility="visible"
+        app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
