--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,21 @@
     <!-- Base application theme. -->
     <style name="Theme.TaulaPeriòdica" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryVariant">@color/teal_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/purple_200</item>
+        <item name="colorSecondaryVariant">@color/purple_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- Canvia el color de la fletxa de retorn del toolbar per ser de color negre -->
         <item name="android:homeAsUpIndicator">@drawable/back_button_image</item>
+        <!-- Canvia el color dels tres punts del "option menu" -->
+        <item name="android:actionOverflowButtonStyle">@style/MenuOpcionsPersonalitzat.OverFlow</item>
+    </style>
+    <style name="MenuOpcionsPersonalitzat.OverFlow" parent="android:style/Widget.Holo.Light.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_options_menu</item>
     </style>
 </resources>
