--- a/app/src/main/res/layout/activity_game_encertar_simbol.xml
+++ b/app/src/main/res/layout/activity_game_encertar_simbol.xml
@@ -42,29 +42,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPregunta" />
 
-    <LinearLayout
-        android:id="@+id/btnLayout"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btnAceptar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:orientation="horizontal"
+        android:layout_margin="30px"
+        android:layout_weight="1"
+        android:text="Acceptar"
+        android:textColor="#000000"
+        app:icon="@drawable/ic_check"
+        app:iconTint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNomElement">
+        app:layout_constraintTop_toBottomOf="@+id/edtNomElement" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Button" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
