--- a/app/src/main/res/layout/activity_game_encertar_simbol.xml
+++ b/app/src/main/res/layout/activity_game_encertar_simbol.xml
@@ -36,14 +36,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="100px"
         android:ems="10"
+        android:hint="Nom de l'element"
         android:inputType="textPersonName"
-        android:text="Nom de l'Element"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPregunta" />
 
     <Button
-        android:id="@+id/btnAceptar"
+        android:id="@+id/btnAcceptar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="30px"
@@ -55,5 +55,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtNomElement" />
+
+    <TextView
+        android:id="@+id/txtPuntuacioActual"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="100px"
+        android:text="Puntuació actual:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAcceptar" />
+
+    <TextView
+        android:id="@+id/txtPuntuacioMaxima"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="100px"
+        android:text="Puntuació màxima:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPuntuacioActual" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
