--- a/app/src/main/res/layout/activity_game_encertar_estat.xml
+++ b/app/src/main/res/layout/activity_game_encertar_estat.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="100px"
-        android:text="Introdueix el símbol de l'element:"
+        android:text="Introdueix l'estat de l'element:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNomElement" />
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="100px"
         android:ems="10"
-        android:hint="Símbol de l'element"
+        android:hint="Estat de l'element"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
