--- a/app/src/main/res/menu/activity_main_menu.xml
+++ b/app/src/main/res/menu/activity_main_menu.xml
@@ -7,7 +7,12 @@
         android:id="@+id/gameButton"
         android:icon="@drawable/ic_media_play_light"
         android:title="Joc"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/personalitzar"
+        android:icon="@drawable/ic_tools"
+        android:title="Personalitzar"
+        app:showAsAction="always" />
     <item
         android:id="@+id/totsButton"
         android:title="Tots" />
